# Bolo_Delicias

./: .env.exemple  README.md  package-lock.json  pyproject.toml  schema.sql
Bolo_Delicias/: pyproject.toml
Bolo_Delicias/src/bolo_delicias/: models.py  schemas.py
Bolo_Dlicias/: pyproject.toml
documentos/requisitos/: rf001.md  rf002.md  rf003.md  rf004.md  rf005.md
meu_projeto/: pyproject.toml
meu_projeto/src/meu_projeto/: database.py  main.py  models.py  schemas.py
meu_projeto/src/meu_projeto/services/: cliente_service.py
src/bolo_delicias/: database.py  main.py  models.py  schemas.py  views.py
src/bolo_delicias/services/: carrinho_service.py  checkour_service.py  checkout_service.py  cliente_service.py  pedido_service.py  tracking_service.py
