[project]
name = "bolo-dlicias"
version = "0.1.0"
description = ""
authors = [
    {name = "Antônio Honório",email = "antonio464466@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "bolo_dlicias", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
