[project]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Antônio Honório",email = "antonio464466@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymysql (>=1.2.0,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)"
]

[tool.poetry]
packages = [{include = "meu_projeto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
